# voxlore

./: .gitignore  CHANGELOG.md  Chinese.md  README.md  index.html  package.json  pnpm-approve-builds.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
scripts/: build-dmg-local.sh  diagnose-macos-accessibility.sh  setup-vosk.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: floating-window.json  main-window.json  setup-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs  resampler.rs  wav.rs
src-tauri/src/commands/: audio.rs  enhancement.rs  floating.rs  mod.rs  model_manager.rs  permissions.rs  preview.rs  recording.rs  settings.rs  stt.rs  text_insert.rs
src-tauri/src/enhancement/: mod.rs  ollama.rs  openai_compat.rs  tw_dict.rs
src-tauri/src/hotkey/: manager.rs
src-tauri/src/security/: keystore.rs
src-tauri/src/stt/: converter.rs  elevenlabs.rs  mistral.rs  mod.rs  openai_whisper.rs  openrouter_audio.rs  vosk_engine.rs
src-tauri/src/text_insertion/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: ApiKeyInput.tsx  ModelManager.tsx  ProviderSelector.tsx  ShortcutDisplay.tsx  ThemeToggle.tsx
src/components/ui/: Button.tsx  Card.tsx  (+7 more)
src/hooks/: useRecordingPipeline.ts
src/i18n/: index.ts
src/lib/: constants.ts  debug.ts  tauri.ts
src/stores/: useAppStore.ts  useRecordingStore.ts  useSettingsStore.ts  useToastStore.ts
src/styles/: globals.css
website/: index.html
(+19 files in other folders)
